--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -4,7 +4,7 @@
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\linewidth]{images/correction.pdf}
-	\caption[Correction of Periodic Detector Noise]{Correction of the periodic detector noise: On the left, the correlation without any applied correction for the periodic noise is shown. The artifacts occupy large areas of the reconstruction. On the right, the spatial spectrum for all columns of the detector and the center part of the correlation (right) are shown for three different cases: Raw (without the correction), with a portwise common mode correction using the median and a correction with adaptive blocks as described in the main text. The portwise correction creates artifacts on the non-affected columns of the detector, whereas the blockwise correction reduces the artifact to small areas that can easily be masked out.}
+	\caption[Correction of periodic detector noise]{Correction of the periodic detector noise: On the left, the correlation without any applied correction for the periodic noise is shown. The artifacts occupy large areas of the reconstruction. On the right, the spatial spectrum for all columns of the detector and the center part of the correlation (right) are shown for three different cases: Raw (without the correction), with a portwise common mode correction using the median and a correction with adaptive blocks as described in the main text. The portwise correction creates artifacts on the non-affected columns of the detector, whereas the blockwise correction reduces the artifact to small areas that can easily be masked out.}
 	\label{fig:app_correction}
 \end{figure}
 
@@ -62,14 +62,14 @@
 		\caption{GaAs Sample 1}
 		\label{fig:spectrum_gaas}
 	\end{subfigure}
-	\caption[Spectrum on the Detector for Nanoparticle and  GaAs samples]{The histogram of the energies recorded by the octal detector after applying all corrections and filtering in counts per images and pixel per 10\,eV bin  The dashed lines are multiples of the iron/gallium K$_\alpha$ energy, the black lines signify the thresholds for the different numbers of signal photons, the colored band shows the standard deviation over different shots. As the nanoparticle sample produces only $\approx 0.04$ signal photons per shot and image and no filter is used, the scattering peak at 11\,keV is higher than the two-photon fluorescence peak.}
+	\caption[Spectrum on the detector for nanoparticle and  GaAs samples]{The histogram of the energies recorded by the octal detector after applying all corrections and filtering in counts per images and pixel per 10\,eV bin  The dashed lines are multiples of the iron/gallium K$_\alpha$ energy, the black lines signify the thresholds for the different numbers of signal photons, the colored band shows the standard deviation over different shots. As the nanoparticle sample produces only $\approx 0.04$ signal photons per shot and image and no filter is used, the scattering peak at 11\,keV is higher than the two-photon fluorescence peak.}
 
 \end{figure}
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/kossel_gaas.png}
-	\caption[Mean image of fluorescence of GaAs after background subtraction with visible Kossel lines ]{Mean images of 5000 shots after background subtraction for sample 1 (left) and sample 2 (right), showing the )(faint) Kossel lines and some artifacts at the edges.}
+	\caption[Mean image of fluorescence of GaAs after background subtraction with visible Kossel lines ]{Mean images of 5000 shots after background subtraction for sample 1 (left) and sample 2 (right), showing the (faint) Kossel lines and some artifacts at the edges.}
 	\label{fig:kosselgaasmean}
 \end{figure}
 
@@ -134,17 +134,7 @@
 \end{table}
 
 
-\begin{figure}[hp!]
-	\centering
-	\begin{subfigure}[b]{0.55\textwidth}
-		\includegraphics[width=\linewidth]{images/gaas2_overview.pdf}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\linewidth]{images/gaas2_zoom.pdf}
-	\end{subfigure}
-	\caption[Results GaAs Sample 2]{Result of the $g^2$  calculation for a GaAs single crystal (GaAs Sample 2).  MIP from $q_z$=0\,nm$^{-1}$ to 0.3\,nm$^{-1}$. Marked areas in the overview on the left around expected positions of Bragg peaks are shown in detail on the right (labeled by the corresponding Laue indices). No Bragg peaks are  clearly distinguishable in the result.}
-	\label{fig:resgaas2}
-\end{figure}
+
 
 
 \begin{figure}[hp!]
