--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -286,7 +286,7 @@
 \listoftables
 
 \vspace{4cm}
-
+\clearpage
 %%%%%%%%%%%% AKÜRZUNGSVERZEICHNIS %%%%%%%%%%%%
 \chapter*{List of Abbreviations}
 \begin{acronym}[XXXXX]
