--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -4,7 +4,7 @@ The optical microscope gave humankind a window into the world of microorganisms,
 
 In X-ray imaging, the usage of synchrotron radiation and finally the advent of free-electron lasers (FELs) providing ultra-short and brilliant X-ray pulses pushed the boundaries far beyond what could have been imagined by Röntgen \cite{cloetens1996,emma2010}. One imaging method making use of these capabilities is Coherent Diffractive Imaging (CDI), in which the spatially and temporally coherent incoming light is scattered in a sample by a fixed phase, conserving its coherence properties and producing an interference pattern which upon measurement can give spatial information with high temporal and spatial resolution \cite{seibert2011,bostedt2010,barke2015}. Incoherent scattering processes, such as fluorescence, are considered background noise worth suppression or filtering in CDI \cite{schultz2013chapter7}. 
 
-Recently, Classen et al. suggested instead to \textit{use} the fluorescence for imaging in a new method they termed Incoherent Diffractive Imaging (IDI) \cite{classen2017} based on the concept of intensity-intensity correlations pioneered by Hanbury-Brown and Twiss in stellar interferometry \cite{hanbury1956}.  Hanbury-Brown and Twiss's experiments famously contradicted the statement by Dirac, that \textit{"[...] each photon then interferes only with itself. Interference between two different photons never occurs.}” \cite{dirac1958} and are considered as one of the most influential experiments leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987,glauber2006}.  Accordingly, the premise of IDI is, as long as the fluorescence can be recorded in a time interval of similar length as its coherence time, the phase fluctuation within a single measurement can be considered as almost stationary, and averaging over enough pairs of intensities in the far-field recovers the sought for spatial information about the sample.
+Recently, Classen et al. suggested instead to \textit{use} the fluorescence for imaging in a new method they termed \textit{Incoherent Diffractive Imaging} (IDI) based on the concept of intensity-intensity correlations pioneered by Hanbury-Brown and Twiss in stellar interferometry \cite{classen2017,hanbury1956}.  Hanbury-Brown and Twiss's experiments famously contradicted the statement by Dirac, that \textit{"[...] each photon then interferes only with itself. Interference between two different photons never occurs.}” \cite{dirac1958} and are considered as one of the most influential experiments leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987,glauber2006}.  Accordingly, the premise of IDI is, as long as the fluorescence can be recorded in a time interval of similar length as its coherence time, the phase fluctuation within a single measurement can be considered as almost stationary, and averaging over enough pairs of intensities in the far-field recovers the sought for spatial information about the sample.
 
 For many elements, the cross-section of fluorescence exceeds that of coherent scattering by orders of magnitude, and the strong anisotropy of coherent scattering leads to the need for high dynamic range detectors in CDI \cite{xraylib,attwood1999}.  Fluorescence, on the other hand, can be recorded in all directions, allowing the use of more detectors and even the integration in existing CDI setups as a second simultaneous imaging method. While wide-angle CDI in a single orientation only gives limit access to three-dimensional information  (only on a two dimensional surface inside the reciprocal space), IDI in the same geometry measures a continuous volume inside the reciprocal space, in theory allowing higher resolution three-dimensional imaging from few orientations \cite{barke2015,classen2017}. Furthermore, as the emitted fluorescence energies are highly element dependent, the method has an inherent element specificity. Taken together, IDI promises to enhance the imaging capabilities using FELs  greatly.
 
